tests/specs/ecosystem/halvardm/sqlx/0_0_0_11.test
halvardm/sqlx/0.0.0-11
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
   */ addEventListener(type: EventType, listener: Listener | null, options?: boolean | ListenerOptions): void {}
      ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/lib/interfaces.ts:416:7

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
   */ dispatchEvent(event: Event): boolean {
      ~~~~~~~~~~~~~
    at file://<tmpdir>/lib/interfaces.ts:421:7

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
   */ removeEventListener(type: EventType, callback: Listener | null, options?: boolean | RemoveListenerOptions): void {}
      ~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/lib/interfaces.ts:428:7

Found 3 errors.

error: Type checking failed.

